--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -7,6 +7,12 @@
 
 # The following line activates a set of recommended lints for Flutter apps,
 # packages, and plugins designed to encourage good coding practices.
+analyzer:
+  errors:
+    library_private_types_in_public_api: ignore
+    prefer_const_constructors: ignore
+    slash_for_doc_comments: ignore
+    use_super_parameters: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
