--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -9,9 +9,13 @@
 # packages, and plugins designed to encourage good coding practices.
 analyzer:
   errors:
+    constant_identifier_names: ignore
     library_private_types_in_public_api: ignore
     prefer_const_constructors: ignore
+    prefer_const_literals_to_create_immutables: ignore
     slash_for_doc_comments: ignore
+    unused_import: ignore
+    unused_local_variable: ignore
     use_super_parameters: ignore
 include: package:flutter_lints/flutter.yaml
 
@@ -27,6 +31,7 @@ linter:
   # `// ignore_for_file: name_of_lint` syntax on the line or in the file
   # producing the lint.
   rules:
+    require_trailing_commas: true
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
 
