--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  flutter_svg: ^2.0.10+1
+  google_fonts: ^6.2.1
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
@@ -59,7 +62,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/
+    - assets/images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -74,12 +79,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Lastik-test
+      fonts:
+        - asset: assets/fonts/lastik-test-cufonfonts-webfont/lastikvariabletest-black.woff
+        - asset: assets/fonts/lastik-test-cufonfonts-webfont/lastikvariabletest-bold.woff
+        - asset: assets/fonts/lastik-test-cufonfonts-webfont/lastikvariabletest-extrabold.woff
+        - asset: assets/fonts/lastik-test-cufonfonts-webfont/lastikvariabletest-regular.woff
+        - asset: assets/fonts/lastik-test-cufonfonts-webfont/lastikvariabletest-semibold.woff
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
