--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: workhouse
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.4.4 <4.0.0'
+  sdk: ">=3.4.4 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -31,13 +31,23 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_svg: ^2.0.10+1
   google_fonts: ^6.2.1
   get: ^4.6.6
+  ionicons: ^0.2.2
+  otp_input_editor: ^0.0.9
+  image_picker: ^1.1.2
+  flutter_carousel_widget: ^2.3.0
+  carousel_slider: ^5.0.0
+  cherry_toast: ^1.11.0
+  supabase_flutter: ^2.6.0
+  supabase: ^2.3.0
+  flutter_dotenv: ^5.1.0
+  shared_preferences: ^2.3.2
+  loading_animation_widget: ^1.2.1
 
 dev_dependencies:
   flutter_test:
@@ -55,7 +65,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
@@ -87,6 +96,17 @@ flutter:
         - asset: assets/fonts/lastik-test-cufonfonts-webfont/lastikvariabletest-extrabold.woff
         - asset: assets/fonts/lastik-test-cufonfonts-webfont/lastikvariabletest-regular.woff
         - asset: assets/fonts/lastik-test-cufonfonts-webfont/lastikvariabletest-semibold.woff
+
+    - family: SF-Pro-Display
+      fonts:
+        - asset: assets/fonts/sf-pro-display-webfont/SF-Pro-Display-Black.woff
+        - asset: assets/fonts/sf-pro-display-webfont/SF-Pro-Display-Bold.woff
+        - asset: assets/fonts/sf-pro-display-webfont/SF-Pro-Display-Semibold.woff
+        - asset: assets/fonts/sf-pro-display-webfont/SF-Pro-Display-Regular.woff
+        - asset: assets/fonts/sf-pro-display-webfont/SF-Pro-Display-Medium.woff
+        - asset: assets/fonts/sf-pro-display-webfont/SF-Pro-Display-Light.woff
+        - asset: assets/fonts/sf-pro-display-webfont/SF-Pro-Display-Heavy.woff
+
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
