--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   shared_preferences: ^2.3.2
   loading_animation_widget: ^1.2.1
+  keyboard_actions: ^4.2.0
 
 dev_dependencies:
   flutter_test:
