--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   shared_preferences: ^2.3.2
   loading_animation_widget: ^1.2.1
   keyboard_actions: ^4.2.0
+  multi_image_picker_plus: ^0.0.5
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
