--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,6 +47,15 @@
 		<true />
 		<key>FLTEnableImpeller</key>
 		<false />
+		<key>NSCameraUsageDescription</key>
+		<string>Scan your card to add it automatically</string>
+		<key>NSCameraUsageDescription &lt;string&gt;To scan cards&lt;/string&gt;</key>
+		<string>To scan cards</string>
+		<key>NSAppTransportSecurity</key>
+		<dict>
+			<key>NSAllowsArbitraryLoads</key>
+			<true />
+		</dict>
 		<key>NSPhotoLibraryUsageDescription</key>
 		<string>App needs access to photo lib for profile images</string>
 		<key>NSCameraUsageDescription</key>
