--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,10 @@ dependencies:
   multi_image_picker_plus: ^0.0.5
   permission_handler: ^11.3.1
   path_provider: ^2.1.4
+  video_player: ^2.9.1
+  multi_image_picker_view: ^1.0.3
+  mime: ^1.0.6
+  cached_video_player_plus: ^3.0.3
 
 dev_dependencies:
   flutter_test:
