--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   mime: ^1.0.6
   flutter_stripe: ^11.0.0
   http: ^1.2.2
+  provider: ^6.1.2
+  url_launcher: ^6.3.0
 
 dev_dependencies:
   flutter_test:
