--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,10 @@ dependencies:
   http: ^1.2.2
   provider: ^6.1.2
   url_launcher: ^6.3.0
+  timezone: ^0.9.4
+  intl: ^0.19.0
+  cached_network_image: ^3.4.1
+  flutter_blurhash: ^0.8.2
 
 dev_dependencies:
   flutter_test:
