--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,10 @@ dependencies:
   intl: ^0.19.0
   cached_network_image: ^3.4.1
   flutter_blurhash: ^0.8.2
+  android_intent_plus: ^5.1.0
+  open_mail_app: ^0.4.5
+  flick_video_player: ^0.9.0
+  flutter_pull_up_down_refresh: ^1.0.4
 
 dev_dependencies:
   flutter_test:
