--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   open_mail_app: ^0.4.5
   flick_video_player: ^0.9.0
   flutter_pull_up_down_refresh: ^1.0.4
+  skeletonizer: ^1.4.2
 
 dev_dependencies:
   flutter_test:
