--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,9 @@ dependencies:
   flick_video_player: ^0.9.0
   flutter_pull_up_down_refresh: ^1.0.4
   skeletonizer: ^1.4.2
+  firebase_core: ^3.5.0
+  firebase_messaging: ^15.1.2
+  flutter_local_notifications: ^17.2.3
 
 dev_dependencies:
   flutter_test:
