--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   firebase_core: ^3.5.0
   firebase_messaging: ^15.1.2
   flutter_local_notifications: ^17.2.3
+  awesome_notifications: ^0.9.3+1
 
 dev_dependencies:
   flutter_test:
