--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,8 @@ dependencies:
   firebase_messaging: ^15.1.2
   flutter_local_notifications: ^17.2.3
   awesome_notifications: ^0.9.3+1
+  flutter_launcher_icons: ^0.14.1
+  icons_launcher: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -85,7 +87,13 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
+icons_launcher:
+  image_path: "assets/icons/icon.jpg"
+  platforms:
+    android:
+      enable: true
+    ios:
+      enable: true
 # The following section is specific to Flutter packages.
 flutter:
   # The following line ensures that the Material Icons font is
