--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   awesome_notifications: ^0.9.3+1
   flutter_launcher_icons: ^0.14.1
   icons_launcher: ^3.0.0
+  otp_pin_field: ^1.2.9+1
 
 dev_dependencies:
   flutter_test:
