--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,8 @@ dependencies:
   flutter_launcher_icons: ^0.14.1
   icons_launcher: ^3.0.0
   otp_pin_field: ^1.2.9+1
+  shimmer: ^3.0.0
+  webview_flutter: ^4.10.0
 
 dev_dependencies:
   flutter_test:
