--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ dependencies:
   otp_pin_field: ^1.2.9+1
   shimmer: ^3.0.0
   webview_flutter: ^4.10.0
+  share_plus: ^10.1.2
 
 dev_dependencies:
   flutter_test:
