--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ dependencies:
   shimmer: ^3.0.0
   webview_flutter: ^4.10.0
   share_plus: ^10.1.2
+  http_parser: ^4.0.2
 
 dev_dependencies:
   flutter_test:
